<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:background="@drawable/backgroundgame">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@mipmap/back" />

        <TextView
            android:id="@+id/TimeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/gridLayout"
            android:layout_alignEnd="@+id/gridLayout"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="140dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/gamefont_regular"
            android:gravity="center"
            android:text="@string/time_10"
            android:textAlignment="center"
            android:textSize="24sp" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="374dp"
            android:layout_height="330dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="0"
                app:layout_row="0"
                app:srcCompat="@mipmap/ic_run" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="1"
                app:layout_row="0"
                app:srcCompat="@mipmap/ic_run" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="2"
                app:layout_row="0"
                app:srcCompat="@mipmap/ic_run" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="0"
                app:layout_row="1"
                app:srcCompat="@mipmap/ic_run" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="1"
                app:layout_row="1"
                app:srcCompat="@mipmap/ic_center" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="2"
                app:layout_row="1"
                app:srcCompat="@mipmap/ic_run" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="0"
                app:layout_row="2"
                app:srcCompat="@mipmap/ic_run" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="1"
                app:layout_row="2"
                app:srcCompat="@mipmap/ic_run" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="125dp"
                android:layout_height="110dp"
                android:onClick="ScoreIncrease"
                app:layout_column="2"
                app:layout_row="2"
                app:srcCompat="@mipmap/ic_run" />
        </androidx.gridlayout.widget.GridLayout>


        <TextView
            android:id="@+id/ScoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rule"
            android:layout_alignStart="@+id/gridLayout"
            android:layout_alignEnd="@+id/gridLayout"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="140dp"
            android:fontFamily="@font/gamefont_regular"
            android:gravity="center"
            android:text="@string/points"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gridLayout"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/gamefont_bold"
            android:text="@string/tap_on_the_minions_to_score"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/retryBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/ScoreTxt"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/retry"
            android:visibility="invisible" />


    </RelativeLayout>
</ScrollView>